--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 				min-height: 400px;
 				background-position:  center center;
 				background-repeat: no-repeat;
-				-webkit-filter: grayscale(100%);
+/*				-webkit-filter: grayscale(100%);
 				-moz-filter: grayscale(100%);
 				-o-filter: grayscale(100%);
-				filter: grayscale(100%);
+				filter: grayscale(100%);*/
 				-webkit-background-size: cover;
 				-moz-background-size: cover;
 			    -o-background-size: cover;
