--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 		<style>
 			.container{
 				min-height: 400px;
+				background-image:url("public/image/bg.jpg");
 				background-position:  center center;
 				background-repeat: no-repeat;
-/*				-webkit-filter: grayscale(100%);
+				-webkit-filter: grayscale(100%);
 				-moz-filter: grayscale(100%);
 				-o-filter: grayscale(100%);
-				filter: grayscale(100%);*/
+				filter: grayscale(100%);
 				-webkit-background-size: cover;
 				-moz-background-size: cover;
 			    -o-background-size: cover;
@@ -107,17 +108,13 @@
 				var date = today.getDate();
 				var url = 'http://cn.bing.com/iod/1366/1024/'+prefixInteger(year,4)+prefixInteger(month,2)+prefixInteger(date,2)+'1600';
 				var image = new Image();
-				image.src = url;
-				if(image.complete&&image.width){
+				image.src = url;			
+				image.onload = function(){
 					document.getElementById('view').style = 'background-image:url("'+url+'");';
-				}else{				
-					image.onload = function(){
-						document.getElementById('view').style = 'background-image:url("'+url+'");';
-					};
-					image.onerror = function(){
-						document.getElementById('view').style = 'background-image:url("public/image/bg.jpg")';
-					};
-				}
+				};
+				image.onerror = function(){
+					document.getElementById('view').style = 'background-image:url("public/image/bg.jpg");';
+				};
 			})();
 		</script>
 	</body>
