--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 		<link rel="canonical" href="http://passser-by.com/index.html">
 		<link rel="stylesheet" href="public/style/common.css">
 		<style>
+			.container-bg{
+				background-image:url("public/image/bg.jpg");
+			}
 			.container{
 				min-height: 400px;
 				background-position: center center;
@@ -107,17 +110,15 @@
 				var date = today.getDate();
 				var url = 'http://cn.bing.com/iod/1366/1024/'+prefixInteger(year,4)+prefixInteger(month,2)+prefixInteger(date,2)+'1600';
 				var image = new Image();
-				image.src = url;
-				if(navigator.userAgent.indexOf('Mobi')>-1){
+				image.src = url;			
+				image.onload = function(){
+					document.getElementById('view').className = 'container container-bg';
+					document.getElementById('view').style = 'background-image:url("'+url+'");';
+				};
+				image.onerror = function(){
+					document.getElementById('view').className = 'container container-bg';
 					document.getElementById('view').style = 'background-image:url("public/image/bg.jpg");';
-				}else{				
-					image.onload = function(){
-						document.getElementById('view').style = 'background-image:url("'+url+'");';
-					};
-					image.onerror = function(){
-						document.getElementById('view').style = 'background-image:url("public/image/bg.jpg");';
-					};
-				}		
+				};
 			})();
 		</script>
 	</body>
