--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				border-bottom: 1px dotted #666;
 			}
 		</style>
-		<script>
+		<script type="text/javascript">
 			(function(){ //IE低版本兼容
 				var e = ['footer','header','section'],
 				          i= e.length;
@@ -99,7 +99,7 @@
 		<div style="display: none;">
 			<script src="http://s95.cnzz.com/z_stat.php?id=1258310068&web_id=1258310068"></script>
 		</div>
-		<script>
+		<script type="text/javascript">
 			(function(){
 				var today = new Date();
 				var prefixInteger = function (num, length) {
