--- a/test.html
+++ b/test.html
@@ -9,6 +9,7 @@
             var dateFormat= function(timestamp){
                 var dt = new Date(timestamp*1000);
                 dt.setMinutes(dt.getMinutes() - dt.getTimezoneOffset()); // 修正时区偏移
+                alert('dt',dt.toISOString());
                 var date = dt.toISOString().slice(0, -5);
                 return date;
             };
