--- a/about.html
+++ b/about.html
@@ -110,6 +110,7 @@
 							<p class="link">
 								<a href="http://maxiaoxiang.com/" target="_blank">MSS。</a>
 								<a href="http://chuangzaoshi.com/" target="_blank">创造狮导航</a>
+								<a href="https://yellowrush.com/" target="_blank">小黄快跑</a>
 								<a href="https://wujunze.com/" target="_blank">吴钧泽博客</a>
 							</p>
 						</section>
