--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
 				var image = new Image();
 				image.src = url;		
 				image.onload = function(){
-					document.getElementById('view').style = 'background-image:url("'+url+'");';
+					document.getElementById('view').setAttribute('style','background-image:url("'+url+'");');
 				};
 				image.onerror = function(){
-					document.getElementById('view').style = 'background-image:url("public/image/bg.jpg");';
+					document.getElementById('view').setAttribute('style','background-image:url(public/image/bg.jpg);');
 				};
 			})();
 		</script>
