--- a/about.html
+++ b/about.html
@@ -113,7 +113,6 @@
 						<section>
 							<h3>友情链接</h3>
 							<p class="link">
-								<a href="http://maxiaoxiang.com/" target="_blank">MSS。</a>
 								<a href="http://chuangzaoshi.com/" target="_blank">创造狮导航</a>
 								<a href="https://wujunze.com/" target="_blank">吴钧泽博客</a>
 							</p>
@@ -132,6 +131,7 @@
 							<p class="gray">[珠海] Zhuhai.city</p>
 							<p class="gray">[东莞] Dongguan.city</p>
 							<p class="gray">[汕头] Shantou.city</p>
+							<p class="gray">[龙岩] Longyan.city</p>
 							<p class="gray">[延安] Yanan.city</p>
 							<p class="gray">[承德] Chengde.city</p>
 							<p class="gray">[芜湖] Wuhu.city</p>
