--- a/project.html
+++ b/project.html
@@ -8,7 +8,7 @@
 		<meta name="keywords" content="web前端开发,前端组件,组件库,jQuery插件">
 		<meta name="author" content="木木阳,mumuy" />
 		<link rel="shortcut icon" href="/public/image/favicon.png">
-		<link rel="canonical" href="http://passser-by.com/product.html">
+		<link rel="canonical" href="https://passser-by.com/product.html">
 		<link rel="stylesheet" href="public/style/common.css">
 		<style>
 			.mod-content section{
@@ -88,34 +88,34 @@
 							<h3>jQuery组件库</h3>
 							<ul>
 								<li>
-									<a class="hot" href="http://jquerywidget.com/jquery-slider/" target="_blank">轮播</a>
-									/<a href="http://jquerywidget.com/jquery-slider/subject.html" target="_blank">全屏滚动</a>
+									<a class="hot" href="//jquerywidget.com/jquery-slider/" target="_blank">轮播</a>
+									/<a href="//jquerywidget.com/jquery-slider/subject.html" target="_blank">全屏滚动</a>
 								</li>
-								<li><a href="http://jquerywidget.com/jquery-tabs/" target="_blank">标签页</a></li>
-								<li><a href="http://jquerywidget.com/jquery-scrollbar/" target="_blank">滚动条</a></li>
-								<li><a href="http://jquerywidget.com/jquery-select/" target="_blank">下拉框</a></li>
-								<li><a href="http://jquerywidget.com/jquery-range/" target="_blank">滑动条</a></li>
-								<li><a href="http://jquerywidget.com/jquery-dialog/" target="_blank">对话框</a></li>
-								<li><a href="http://jquerywidget.com/jquery-countdown/" target="_blank">倒计时</a></li>
-								<li><a href="http://jquerywidget.com/jquery-imagezoom/" target="_blank">图片聚焦</a></li>
-								<li><a href="http://jquerywidget.com/jquery-headroom/" target="_blank">浮动菜单</a></li>
+								<li><a href="//jquerywidget.com/jquery-tabs/" target="_blank">标签页</a></li>
+								<li><a href="//jquerywidget.com/jquery-scrollbar/" target="_blank">滚动条</a></li>
+								<li><a href="//jquerywidget.com/jquery-select/" target="_blank">下拉框</a></li>
+								<li><a href="//jquerywidget.com/jquery-range/" target="_blank">滑动条</a></li>
+								<li><a href="//jquerywidget.com/jquery-dialog/" target="_blank">对话框</a></li>
+								<li><a href="//jquerywidget.com/jquery-countdown/" target="_blank">倒计时</a></li>
+								<li><a href="//jquerywidget.com/jquery-imagezoom/" target="_blank">图片聚焦</a></li>
+								<li><a href="//jquerywidget.com/jquery-headroom/" target="_blank">浮动菜单</a></li>
 								<li>
-									<a href="http://jquerywidget.com/jquery-calendar/" target="_blank">日历</a>
-									/<a href="http://jquerywidget.com/jquery-calendar/slider.html" target="_blank">滑动日历(基于轮播)</a>
+									<a href="//jquerywidget.com/jquery-calendar/" target="_blank">日历</a>
+									/<a href="//jquerywidget.com/jquery-calendar/slider.html" target="_blank">滑动日历(基于轮播)</a>
 								</li>
-								<li><a href="http://jquerywidget.com/jquery-popup/" target="_blank">弹出层</a></li>
-								<li><a href="http://jquerywidget.com/jquery-suggestion/" target="_blank">搜索建议</a></li>
-								<li><a href="http://jquerywidget.com/jquery-citys/" target="_blank">城市三级联动</a></li>
-								<li><a href="http://jquerywidget.com/jquery-inputFormat/" target="_blank">格式化输入框</a></li>
-								<li><a href="http://jquerywidget.com/jquery-accordion/" target="_blank">手风琴</a></li>
-								<li><a href="http://jquerywidget.com/jquery-colorpicker/" target="_blank">颜色选择器</a></li>
-								<li><a href="http://jquerywidget.com/jquery-emoticons/" target="_blank">聊天表情</a></p></li>
+								<li><a href="//jquerywidget.com/jquery-popup/" target="_blank">弹出层</a></li>
+								<li><a href="//jquerywidget.com/jquery-suggestion/" target="_blank">搜索建议</a></li>
+								<li><a href="//jquerywidget.com/jquery-citys/" target="_blank">城市三级联动</a></li>
+								<li><a href="//jquerywidget.com/jquery-inputFormat/" target="_blank">格式化输入框</a></li>
+								<li><a href="//jquerywidget.com/jquery-accordion/" target="_blank">手风琴</a></li>
+								<li><a href="//jquerywidget.com/jquery-colorpicker/" target="_blank">颜色选择器</a></li>
+								<li><a href="//jquerywidget.com/jquery-emoticons/" target="_blank">聊天表情</a></p></li>
 							</ul>
 						</section>
 						<section>
 							<h3>Zepto组件库</h3>
 							<ul>
-								<li><a href="http://jquerywidget.com/zepto-slider/" target="_blank">轮播</a></li>
+								<li><a href="//jquerywidget.com/zepto-slider/" target="_blank">轮播</a></li>
 							</ul>
 						</section>
 						<section>
@@ -128,7 +128,7 @@
 						<section>
 							<h3>站点</h3>
 							<ul>
-								<li><a href="http://jquerywidget.com" target="_blank">jQuery组件库官网</a></li>
+								<li><a href="//jquerywidget.com" target="_blank">jQuery组件库官网</a></li>
 								<li><a href="http://passerby.cn" target="_blank">随机导航网</a></li>
 							</ul>
 						</section>
