--- a/about.html
+++ b/about.html
@@ -150,7 +150,7 @@
 			</footer>
 		</div>
 		<div style="display: none;">
-			<script src="http://s95.cnzz.com/z_stat.php?id=1258310068&web_id=1258310068"></script>
+			<script src="https://s95.cnzz.com/z_stat.php?id=1258310068&web_id=1258310068"></script>
 		</div>
 	</body>
 </html>
