--- a/about.html
+++ b/about.html
@@ -113,6 +113,7 @@
 						<section>
 							<h3>友情链接</h3>
 							<p class="link">
+								<a href="http://qianshu.city/" target="_blank">千树CityHome</a>
 								<a href="http://chuangzaoshi.com/" target="_blank">创造狮导航</a>
 								<a href="https://wujunze.com/" target="_blank">吴钧泽博客</a>
 							</p>
