--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
 							<p class="gray">[长春] Changchun.city</p>
 							<p class="gray">[南宁] Nanning.city</p>
 							<p class="gray">[南昌] Nanchang.city</p>
-							<p class="gray">[厦门] xiamen.city</p>
+							<p class="gray">[厦门] Xiamen.city</p>
 							<p class="gray">[三亚] Sanya.city</p>
 							<p class="gray">[丽江] Lijiang.city</p>
 							<p class="gray">[大理] Dali.city</p>
