--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 				}
 			})();
 		</script>
+		<script data-ad-client="ca-pub-5322941251486103" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
 	<body>
 		<div class="wrapper">
@@ -153,7 +154,7 @@
 				var date = today.getDate();
 				var url = 'http://cn.bing.com/iod/1366/1024/'+prefixInteger(year,4)+prefixInteger(month,2)+prefixInteger(date,2)+'1600';
 				var image = new Image();
-				image.src = url;		
+				image.src = url;
 				image.onload = function(){
 					document.getElementById('view').setAttribute('style','background-image:url("'+url+'");');
 				};
