--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
 	                if(navigator.connection){
 	                    network = navigator.connection.effectiveType;
 	                }
-	                fetch('https://api.liatu.cn/ipchaxun/?lng='+longitude+'&lat='+latitude+'&network='+network, {
+	                fetch('https://api.liantu.cn/ipchaxun/?lng='+longitude+'&lat='+latitude+'&network='+network, {
                     	method:'GET'
 	                }).then(function(response){
 	                    response.json().then(function(json){
