--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		</div>
 		<div style="display: none;">
 			<a href="https://huanlianjie.com/" target="_blank">换链接</a>
-			<a href="http://www.forthxu.com/" target="_blank">forthxu个人站</a>
+			<a href="http://forthxu.com/" target="_blank">forthxu个人站</a>
 			<script src="https://s95.cnzz.com/z_stat.php?id=1258310068&web_id=1258310068"></script>
 		</div>
 		<script>
