--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
 			</footer>
 		</div>
 		<div style="display: none;">
+			<a href="http://www.ptnews.top/" target="_blank">OneinStack</a>
 			<a href="https://huanlianjie.com/" target="_blank">换链接</a>
 			<a href="http://forthxu.com/" target="_blank">forthxu个人站</a>
 			<script src="https://s95.cnzz.com/z_stat.php?id=1258310068&web_id=1258310068"></script>
