--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			</footer>
 		</div>
 		<div style="display: none;">
-			<a href="http://www.ptnews.top/" target="_blank">OneinStack</a>
+			<a href="http://novel.ptnews.top" target="_blank">OneinStack</a>
 			<a href="https://www.huanlianjie.com/passer-by.com/#16" target="_blank">换链接</a>
 			<a href="http://forthxu.com/" target="_blank">forthxu个人站</a>
 			<script src="https://s95.cnzz.com/z_stat.php?id=1258310068&web_id=1258310068"></script>
