--- a/index.html
+++ b/index.html
@@ -122,7 +122,10 @@
 			<div id="view" class="container"></div>
 			<footer>
 				<div class="mod-foot">
-					<p>Copyright &copy; 2017 <a href="/">passer-by.com</a></p>
+					<p>
+						Copyright &copy; 2020 <a href="/">passer-by.com</a>
+						<a href="http://www.beian.miit.gov.cn/" rel="nofollow" target="_blank">闽ICP备18014328号-2</a>
+					</p>
 				</div>
 			</footer>
 		</div>
