--- a/test.html
+++ b/test.html
@@ -44,12 +44,12 @@
 3.您也可以百度搜索关键字:5G云源码分享网<br />
 </div>
 <div id="browser">
-    <a href="mttbrowser://url=https://liantu.com"><img src="http://wx3.sinaimg.cn/mw690/0060lm7Tly1g019l1s0o0j3074074t9r.jpg"></img></a>
-    <a href="googlechrome://browse?url=https://liantu.com"><img src="http://wx3.sinaimg.cn/mw690/0060lm7Tly1g019l1zpavj3074074tax.jpg"></img></a>
-    <a href="alipays://platformapi/startapp?appId=20000067&url=https://liantu.com"><img src="http://wx4.sinaimg.cn/mw690/0060lm7Tly1g019l1rqdbj3074074gmp.jpg"></img></a>
-    <a href="googlechrome://browse?url=https://liantu.com"><img src="http://wx2.sinaimg.cn/mw690/0060lm7Tly1g019l1rjw5j3074074dfy.jpg"></img></a>
-    <a href="ucbrowser://https://liantu.com"><img src="http://wx4.sinaimg.cn/mw690/0060lm7Tly1g019l1snd3j3074074gnv.jpg"></img></a>
-    <a href="bdbrowser://https://liantu.com"><img src="http://wx1.sinaimg.cn/mw690/0060lm7Tly1g019v4k8vkj307407440t.jpg"></img></a>
+    <a href="mttbrowser://url=https%3A%2F%2Fliantu.com"><img src="http://wx3.sinaimg.cn/mw690/0060lm7Tly1g019l1s0o0j3074074t9r.jpg"></img></a>
+    <a href="googlechrome://browse?url=http%3A%2F%2Fliantu.com"><img src="http://wx3.sinaimg.cn/mw690/0060lm7Tly1g019l1zpavj3074074tax.jpg"></img></a>
+    <a href="alipays://platformapi/startapp?appId=20000067&url=https%3A%2F%2Fliantu.com"><img src="http://wx4.sinaimg.cn/mw690/0060lm7Tly1g019l1rqdbj3074074gmp.jpg"></img></a>
+    <a href="googlechrome://browse?url=https%3A%2F%2Fliantu.com"><img src="http://wx2.sinaimg.cn/mw690/0060lm7Tly1g019l1rjw5j3074074dfy.jpg"></img></a>
+    <a href="ucbrowser://https%3A%2F%2Fliantu.com"><img src="http://wx4.sinaimg.cn/mw690/0060lm7Tly1g019l1snd3j3074074gnv.jpg"></img></a>
+    <a href="baiduboxapp://browse?url=http%3A%2F%2Fliantu.com"><img src="http://wx1.sinaimg.cn/mw690/0060lm7Tly1g019v4k8vkj307407440t.jpg"></img></a>
 </div>
 <div class="app-download-tip">
     <span class="guidance-desc">点击上方图标or复制本站网址自行打开</span>
