--- a/test.html
+++ b/test.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <div id="browser">
-    <a href="baiduboxapp://browse?url=http%3A%2F%2Fliantu.com"><img src="http://wx1.sinaimg.cn/mw690/0060lm7Tly1g019v4k8vkj307407440t.jpg"></img></a>
+    <a href="baiduboxapp://liantu.com/"><img src="http://wx1.sinaimg.cn/mw690/0060lm7Tly1g019v4k8vkj307407440t.jpg"></img></a>
 </div>
 </html>
