--- a/test.html
+++ b/test.html
@@ -9,5 +9,8 @@
 <body>
 <div id="browser">
     <a href="baiduboxapp://v1/browser/open?url=http://liantu.com/"><img src="http://wx1.sinaimg.cn/mw690/0060lm7Tly1g019v4k8vkj307407440t.jpg"></img></a>
+    <a href="baiduboxapp://v1/browser/open?url=https://www.luyouqi.com/"><img src="http://wx1.sinaimg.cn/mw690/0060lm7Tly1g019v4k8vkj307407440t.jpg"></img></a>
+
+    <iframe class="hide" src="baiduboxapp://v1/browser/open?url=https://www.luyouqi.com/" frameborder="0"></iframe>
 </div>
 </html>
