--- a/test.html
+++ b/test.html
@@ -12,5 +12,12 @@
     <a href="baiduboxapp://v1/browser/open?url=https://www.luyouqi.com/"><img src="http://wx1.sinaimg.cn/mw690/0060lm7Tly1g019v4k8vkj307407440t.jpg"></img></a>
 
     <iframe class="hide" src="baiduboxapp://v1/browser/open?url=https://www.luyouqi.com/" frameborder="0"></iframe>
+    <script>
+		var $link = document.createElement('a');
+		$link.href = 'baiduboxapp://v1/browser/open?url=https://www.luyouqi.com/';
+		setTimeout(function(){
+			$link.click();
+		},500);
+    </script>
 </div>
 </html>
