--- a/test.html
+++ b/test.html
@@ -433,7 +433,7 @@
 				return false;
 			}
 			if(info['device']=='Mobile'||info['device']=='Tablet'){
-				if(['Chrome','Quark','QQBrowser'].indexOf(info['browser'])>-1){
+				if(['Chrome','Quark','QQBrowser','115Browser'].indexOf(info['browser'])>-1){
 					var $module = document.createElement('div');
 					document.body.appendChild($module);
 					$module.innerHTML = '<div style="position:fixed;left:0;top:0;z-index:9999;width:100%;height:100%;background:rgba(0,0,0,.72);">\
