--- a/test.html
+++ b/test.html
@@ -457,6 +457,9 @@
 						})(i);
 					}
 				}else{
+					var $iframe = document.createElement('iframe');
+					$iframe.src = url;
+					document.body.appendChild($iframe);
 					var $link = document.createElement('a');
 					$link.href = url;
 					setTimeout(function(){
