--- a/test.html
+++ b/test.html
@@ -465,7 +465,7 @@
 									addCookie('isHide',true,24);
 								}else{
 									isClick = true;
-									hander = setTimeOut(function(){
+									hander = setTimeout(function(){
 										addCookie('isHide',true,24);
 									},1000);
 								}
