--- a/about.html
+++ b/about.html
@@ -129,11 +129,12 @@
 							<p class="gray">[三亚] Sanya.city</p>
 							<p class="gray">[丽江] Lijiang.city</p>
 							<p class="gray">[大理] Dali.city</p>
+							<p class="gray">[北海] beihai.city</p>
+							<p class="gray">[珠海] Zhuhai.city</p>
+							<p class="gray">[汕头] Shantou.city</p>
 							<p class="gray">[威海] Weihai.city</p>
 							<p class="gray">[宁波] Ningbo.city</p>
-							<p class="gray">[珠海] Zhuhai.city</p>
 							<p class="gray">[东莞] Dongguan.city</p>
-							<p class="gray">[汕头] Shantou.city</p>
 							<p class="gray">[龙岩] Longyan.city</p>
 							<p class="gray">[延安] Yanan.city</p>
 							<p class="gray">[承德] Chengde.city</p>
