--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
 							<p class="gray">[三亚] Sanya.city</p>
 							<p class="gray">[丽江] Lijiang.city</p>
 							<p class="gray">[大理] Dali.city</p>
-							<p class="gray">[北海] beihai.city</p>
+							<p class="gray">[北海] Beihai.city</p>
 							<p class="gray">[珠海] Zhuhai.city</p>
 							<p class="gray">[汕头] Shantou.city</p>
 							<p class="gray">[威海] Weihai.city</p>
