--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				<div class="mod-foot">
 					<p>
 						Copyright &copy; 2020 <a href="/">passer-by.com</a>
-						<a href="http://www.beian.miit.gov.cn/" rel="nofollow" target="_blank">闽ICP备18014328号-2</a>
+						<a href="https://beian.miit.gov.cn/" rel="nofollow" target="_blank">闽ICP备18014328号-2</a>
 					</p>
 				</div>
 			</footer>
