--- a/project.html
+++ b/project.html
@@ -137,6 +137,7 @@
 							<h3>其他</h3>
 							<ul>
 								<li><a href="/browser/" target="_blank">浏览器及设备判断</a></li>
+								<li><a href="/html5player/" target="_blank">媒体播放器</a></li>
 								<li><a href="/fancy-icon/" target="_blank">纯CSS图标</a></li>
 							</ul>
 						</section>
