--- a/project.html
+++ b/project.html
@@ -136,6 +136,7 @@
 						<section>
 							<h3>其他</h3>
 							<ul>
+								<li><a href="/imageCode/" target="_blank">Javascript脚本加密</a></li>
 								<li><a href="/browser/" target="_blank">浏览器及设备判断</a></li>
 								<li><a href="/html5player/" target="_blank">媒体播放器</a></li>
 								<li><a href="/fancy-icon/" target="_blank">纯CSS图标</a></li>
