--- a/project.html
+++ b/project.html
@@ -74,14 +74,14 @@
 							<ul>
 								<li><a href="/finder/" target="_blank">最短寻址</a></li>
 								<li><a href="/calc24/" target="_blank">24点计算</a></li>
-								<li><a href="/relationship/" target="_blank">中国家庭称谓计算</a></li>
+								<li><a href="/relationship/" target="_blank">中国亲戚关系计算器</a></li>
 								<li><a href="/chinese-transverter/" target="_blank">中文简体繁体转换器</a></li>
 							</ul>
 						</section>
 						<section>
 							<h3>APP</h3>
 							<ul>
-								<li><a href="/relationship/app.html" target="_blank">三姑六婆计算器</a></li>
+								<li><a href="/relationship/vue/" target="_blank">亲戚关系计算器移动版</a></li>
 							</ul>
 						</section>
 						<section>
