--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
 							<p class="link">
 								<a href="http://qianshu.city/" target="_blank">千树CityHome</a>
 								<a href="http://chuangzaoshi.com/" target="_blank">创造狮导航</a>
-								<a href="https://wujunze.com/" target="_blank">吴钧泽博客</a>
+								<a href="https://jquerywidget.com/" target="_blank">jQuery组件</a>
 							</p>
 						</section>
 						<section>
