--- a/project.html
+++ b/project.html
@@ -136,7 +136,8 @@
 						<section>
 							<h3>其他</h3>
 							<ul>
-								<li><a href="/imageCode/" target="_blank">Javascript脚本加密</a></li>
+								<li><a href="/imageCode/" target="_blank">imageCode脚本加密</a></li>
+								<li><a href="/hiddenCode/" target="_blank">hiddenCode脚本加密</a></li>
 								<li><a href="/browser/" target="_blank">浏览器及设备判断</a></li>
 								<li><a href="/html5player/" target="_blank">媒体播放器</a></li>
 								<li><a href="/fancy-icon/" target="_blank">纯CSS图标</a></li>
@@ -156,7 +157,7 @@
 		    (function() {
 		      var hm = document.createElement("script");
 		      hm.src = "https://hm.baidu.com/hm.js?b86879c9cc57dd112fe1f7dd75206b82";
-		      var s = document.getElementsByTagName("script")[0]; 
+		      var s = document.getElementsByTagName("script")[0];
 		      s.parentNode.insertBefore(hm, s);
 		    })();
 	    </script>
