--- a/project.html
+++ b/project.html
@@ -75,7 +75,8 @@
 								<li><a href="/finder/" target="_blank">最短寻址</a></li>
 								<li><a href="/calc24/" target="_blank">24点计算</a></li>
 								<li><a href="/relationship/" target="_blank">中国亲戚关系计算器</a></li>
-								<li><a href="/chinese-transverter/" target="_blank">中文简体繁体转换器</a></li>
+								<li><a href="/chinese-transverter/" target="_blank">中文简体繁体转换器</a></li
+								<li><a href="/calendar/" target="_blank">农历公历转换</a></li>
 							</ul>
 						</section>
 						<section>
