--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
     <meta name="format-detection" content="telephone=no">
+    <meta name="apple-itunes-app" content="app-id=1503453305">
 </head>
 <body>
 <div id="browser">
