--- a/project.html
+++ b/project.html
@@ -107,6 +107,7 @@
 								<li><a href="//jquerywidget.com/jquery-popup/" target="_blank">弹出层</a></li>
 								<li><a href="//jquerywidget.com/jquery-suggestion/" target="_blank">搜索建议</a></li>
 								<li><a href="//jquerywidget.com/jquery-citys/" target="_blank">城市三级联动</a></li>
+								<li><a href="//jquerywidget.com/jquery-tablesort/" target="_blank">表格排序</a></li>
 								<li><a href="//jquerywidget.com/jquery-inputFormat/" target="_blank">格式化输入框</a></li>
 								<li><a href="//jquerywidget.com/jquery-accordion/" target="_blank">手风琴</a></li>
 								<li><a href="//jquerywidget.com/jquery-colorpicker/" target="_blank">颜色选择器</a></li>
