--- a/project.html
+++ b/project.html
@@ -144,9 +144,10 @@
 						<section>
 							<h3>其他</h3>
 							<ul>
+								<li><a href="/datex/" target="_blank">DataX时间格式化</a></li>
+								<li><a href="/browser/" target="_blank">浏览器及设备判断</a></li>
 								<li><a href="/imageCode/" target="_blank">imageCode脚本加密</a></li>
 								<li><a href="/hiddenCode/" target="_blank">hiddenCode脚本加密</a></li>
-								<li><a href="/browser/" target="_blank">浏览器及设备判断</a></li>
 								<li><a href="/html5player/" target="_blank">媒体播放器</a></li>
 								<li><a href="/fancy-icon/" target="_blank">纯CSS图标</a></li>
 							</ul>
