--- a/project.html
+++ b/project.html
@@ -139,6 +139,7 @@
 							<h3>数据</h3>
 							<ul>
 								<li><a href="/data_location/" target="_blank">中国行政区划数据</a></li>
+								<li><a href="/data_post/" target="_blank">中国邮政编码数据</a></li>
 							</ul>
 						</section>
 						<section>
