--- a/project.html
+++ b/project.html
@@ -336,6 +336,12 @@
 								</li>
 								<li>
 									<div class="J_link item">
+										<p class="title"><a href="/datex/timezone.html" target="_blank">世界时间</a></p>
+										<p class="summary">各大著名城市当地时间</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
 										<p class="title"><a href="/browser/" target="_blank">浏览器及设备判断</a></p>
 										<p class="summary">识别用户浏览器信息</p>
 									</div>
