--- a/project.html
+++ b/project.html
@@ -348,6 +348,12 @@
 								</li>
 								<li>
 									<div class="J_link item">
+										<p class="title"><a href="/widget-code/" target="_blank">代码着色美化</a></p>
+										<p class="summary">让你的代码更性感</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
 										<p class="title"><a href="/imageCode/" target="_blank">imageCode脚本加密</a></p>
 										<p class="summary">将代码转化成图片加密</p>
 									</div>
