--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<link rel="shortcut icon" href="/public/image/favicon.png">
 		<link rel="canonical" href="http://passser-by.com/index.html">
 		<link rel="stylesheet" href="public/style/common.css">
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5322941251486103"
+     crossorigin="anonymous"></script>
 		<style>
 			@media screen and (max-width: 400px) {
 				.container{
