--- a/project.html
+++ b/project.html
@@ -200,6 +200,12 @@
 								</li>
 								<li>
 									<div class="J_link item">
+										<p class="title"><a href="//jquerywidget.com/jquery-magiczoom/" target="_blank">图片放大镜</a></p>
+										<p class="summary">产品图片细节放大镜展示</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
 										<p class="title"><a href="//jquerywidget.com/jquery-headroom/" target="_blank">浮动菜单</a></p>
 										<p class="summary">网页滚动时菜单浮动驻留效果</p>
 									</div>
