--- a/project.html
+++ b/project.html
@@ -326,7 +326,7 @@
 								<li>
 									<div class="J_link item">
 										<p class="title"><a href="/data_location/" target="_blank">中国行政区划数据</a></p>
-										<p class="summary">身份证号码归属地查询</p>
+										<p class="summary">省、市、县区行政区划代码数据</p>
 									</div>
 								</li>
 							</ul>
@@ -356,6 +356,12 @@
 									<div class="J_link item">
 										<p class="title"><a href="/widget-code/" target="_blank">代码着色美化</a></p>
 										<p class="summary">让你的代码更性感</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/idcard/" target="_blank">中国身份证号码解析</a></p>
+										<p class="summary">居民身份证、外国人永久居留身份证号码解析</p>
 									</div>
 								</li>
 								<li>
