--- a/project.html
+++ b/project.html
@@ -366,6 +366,12 @@
 								</li>
 								<li>
 									<div class="J_link item">
+										<p class="title"><a href="/anynumber/" target="_blank">大数浮点数计算</a></p>
+										<p class="summary">提供大数浮点数计算及数值格式化工具</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
 										<p class="title"><a href="/imageCode/" target="_blank">imageCode脚本加密</a></p>
 										<p class="summary">将代码转化成图片加密</p>
 									</div>
