--- a/project.html
+++ b/project.html
@@ -360,6 +360,12 @@
 								</li>
 								<li>
 									<div class="J_link item">
+										<p class="title"><a href="/widget-qrcode/" target="_blank">二维码组件</a></p>
+										<p class="summary">二维码图片实时根据内容变化</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
 										<p class="title"><a href="/idcard/" target="_blank">中国身份证号码解析</a></p>
 										<p class="summary">居民身份证、外国人永久居留身份证号码解析</p>
 									</div>
